--- a/part_one_Jewelry.ipynb
+++ b/part_one_Jewelry.ipynb
@@ -12,94 +12,82 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "-8eFW_wl1n39",
-        "outputId": "67736f25-c509-42e2-e4c7-9cda846f5bcd"
+        "outputId": "e482e7a2-9827-4e74-e2a2-7d5fee2471b7"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\r0% [Working]\r            \rHit:1 http://archive.ubuntu.com/ubuntu focal InRelease\n",
-            "\r0% [Waiting for headers] [Connected to cloud.r-project.org (65.9.86.28)] [Conne\r                                                                               \rGet:2 http://archive.ubuntu.com/ubuntu focal-updates InRelease [114 kB]\n",
-            "\r                                                                               \rGet:3 http://archive.ubuntu.com/ubuntu focal-backports InRelease [108 kB]\n",
-            "\r                                                                               \rGet:4 http://security.ubuntu.com/ubuntu focal-security InRelease [114 kB]\n",
-            "\r                                                                               \rGet:5 https://cloud.r-project.org/bin/linux/ubuntu focal-cran40/ InRelease [3,622 B]\n",
-            "\r                                                                               \rHit:6 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu focal InRelease\n",
-            "\r                                                                               \rHit:7 http://ppa.launchpad.net/cran/libgit2/ubuntu focal InRelease\n",
-            "\r                                                                               \rHit:8 http://ppa.launchpad.net/deadsnakes/ppa/ubuntu focal InRelease\n",
-            "\r                                                                               \rHit:9 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu focal InRelease\n",
-            "Hit:10 http://ppa.launchpad.net/ubuntugis/ppa/ubuntu focal InRelease\n",
+            "\r0% [Working]\r            \rHit:1 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu focal InRelease\n",
+            "\r0% [Waiting for headers] [Connecting to security.ubuntu.com (91.189.91.38)] [Wa\r                                                                               \rHit:2 http://archive.ubuntu.com/ubuntu focal InRelease\n",
+            "\r                                                                               \rHit:3 https://cloud.r-project.org/bin/linux/ubuntu focal-cran40/ InRelease\n",
+            "\r0% [Waiting for headers] [Connecting to security.ubuntu.com (91.189.91.38)] [Wa\r                                                                               \rGet:4 http://archive.ubuntu.com/ubuntu focal-updates InRelease [114 kB]\n",
+            "\r0% [4 InRelease 14.2 kB/114 kB 12%] [Connecting to security.ubuntu.com (91.189.\r                                                                               \rHit:5 http://ppa.launchpad.net/cran/libgit2/ubuntu focal InRelease\n",
+            "\r0% [4 InRelease 15.6 kB/114 kB 14%] [Connecting to security.ubuntu.com (91.189.\r                                                                               \rHit:6 http://ppa.launchpad.net/deadsnakes/ppa/ubuntu focal InRelease\n",
+            "\r0% [4 InRelease 83.7 kB/114 kB 74%] [Connecting to security.ubuntu.com (91.189.\r0% [Waiting for headers] [Waiting for headers] [Waiting for headers] [Connectin\r                                                                               \rGet:7 http://archive.ubuntu.com/ubuntu focal-backports InRelease [108 kB]\n",
+            "\r0% [7 InRelease 12.7 kB/108 kB 12%] [Waiting for headers] [Waiting for headers]\r                                                                               \rHit:8 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu focal InRelease\n",
+            "\r0% [7 InRelease 64.9 kB/108 kB 60%] [Waiting for headers] [Waiting for headers]\r0% [Waiting for headers] [Waiting for headers] [Connecting to ppa.launchpad.net\r                                                                               \rHit:9 http://ppa.launchpad.net/ubuntugis/ppa/ubuntu focal InRelease\n",
+            "Get:10 http://security.ubuntu.com/ubuntu focal-security InRelease [114 kB]\n",
             "Ign:11 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu2004/x86_64  InRelease\n",
             "Hit:12 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2004/x86_64  InRelease\n",
             "Hit:13 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu2004/x86_64  Release\n",
-            "Get:14 http://archive.ubuntu.com/ubuntu focal-updates/universe amd64 Packages [1,308 kB]\n",
-            "Get:15 http://archive.ubuntu.com/ubuntu focal-updates/restricted amd64 Packages [2,134 kB]\n",
-            "Get:16 http://archive.ubuntu.com/ubuntu focal-updates/main amd64 Packages [3,012 kB]\n",
-            "Get:17 http://archive.ubuntu.com/ubuntu focal-updates/multiverse amd64 Packages [31.3 kB]\n",
-            "Get:18 http://security.ubuntu.com/ubuntu focal-security/restricted amd64 Packages [1,998 kB]\n",
-            "Get:19 http://security.ubuntu.com/ubuntu focal-security/main amd64 Packages [2,535 kB]\n",
-            "Get:20 http://security.ubuntu.com/ubuntu focal-security/universe amd64 Packages [1,012 kB]\n",
-            "Fetched 12.4 MB in 3s (4,285 kB/s)\n",
+            "Get:14 http://archive.ubuntu.com/ubuntu focal-updates/restricted amd64 Packages [2,134 kB]\n",
+            "Get:15 http://archive.ubuntu.com/ubuntu focal-updates/multiverse amd64 Packages [31.3 kB]\n",
+            "Get:16 http://archive.ubuntu.com/ubuntu focal-updates/universe amd64 Packages [1,308 kB]\n",
+            "Get:17 http://archive.ubuntu.com/ubuntu focal-updates/main amd64 Packages [3,012 kB]\n",
+            "Fetched 6,822 kB in 1s (4,645 kB/s)\n",
             "Reading package lists... Done\n"
           ]
         }
       ],
       "source": [
         "import os\n",
+        "# spark-3.3.2-bin-hadoop3.tgz\n",
         "# Find the latest version of spark 3.2  from http://www.apache.org/dist/spark/ and enter as the spark version\n",
         "# For example:\n",
         "# spark_version = 'spark-3.2.2'\n",
-        "spark_version = 'spark-3.2.3'\n",
+        "spark_version = 'spark-3.3.2'\n",
         "os.environ['SPARK_VERSION']=spark_version\n",
-        "\n",
         "# Install Spark and Java\n",
         "!apt-get update\n",
-        "!apt-get install openjdk-11-jdk-headless -qq > /dev/null\n",
-        "!wget -q https://downloads.apache.org/spark/$SPARK_VERSION/$SPARK_VERSION-bin-hadoop2.7.tgz\n",
-        "!tar xf $SPARK_VERSION-bin-hadoop2.7.tgz\n",
-        "!pip install -q findspark\n",
-        "\n",
-        "# Set Environment Variables\n",
-        "import os\n",
-        "os.environ[\"JAVA_HOME\"] = \"/usr/lib/jvm/java-11-openjdk-amd64\"\n",
-        "os.environ[\"SPARK_HOME\"] = f\"/content/{spark_version}-bin-hadoop2.7\"\n",
-        "\n",
-        "# Start a SparkSession\n",
-        "import findspark\n",
-        "findspark.init()"
+        "!apt-get install openjdk-8-jdk-headless -qq > /dev/null\n",
+        "!wget -q http://www.apache.org/dist/spark/$SPARK_VERSION/$SPARK_VERSION-bin-hadoop3.tgz\n",
+        "!tar xf $SPARK_VERSION-bin-hadoop3.tgz\n",
+        "!pip install -q findspark"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "BzCrgs0Z1rnw",
-        "outputId": "6c8bee4e-f014-4f6e-e858-e1118d5b0d6a"
+        "outputId": "2f727d80-5c45-493c-abc9-a11a3e4bac23"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2023-03-03 01:33:12--  https://jdbc.postgresql.org/download/postgresql-42.2.9.jar\n",
+            "--2023-03-03 02:44:37--  https://jdbc.postgresql.org/download/postgresql-42.2.9.jar\n",
             "Resolving jdbc.postgresql.org (jdbc.postgresql.org)... 72.32.157.228, 2001:4800:3e1:1::228\n",
             "Connecting to jdbc.postgresql.org (jdbc.postgresql.org)|72.32.157.228|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 914037 (893K) [application/java-archive]\n",
-            "Saving to: ‘postgresql-42.2.9.jar’\n",
+            "Saving to: ‘postgresql-42.2.9.jar.1’\n",
             "\n",
-            "postgresql-42.2.9.j 100%[===================>] 892.61K  1.70MB/s    in 0.5s    \n",
+            "postgresql-42.2.9.j 100%[===================>] 892.61K  1.43MB/s    in 0.6s    \n",
             "\n",
-            "2023-03-03 01:33:14 (1.70 MB/s) - ‘postgresql-42.2.9.jar’ saved [914037/914037]\n",
+            "2023-03-03 02:44:39 (1.43 MB/s) - ‘postgresql-42.2.9.jar.1’ saved [914037/914037]\n",
             "\n"
           ]
         }
@@ -111,7 +99,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 18,
       "metadata": {
         "id": "0DuBth0V2PR8"
       },
@@ -133,13 +121,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Na_stw7b1wfU",
-        "outputId": "94dfbd83-3520-4c99-ca1a-15adcb1daad6"
+        "outputId": "ae96aa1a-4911-453a-e09b-b264a4535f37"
       },
       "outputs": [
         {
